# Toy-Engine

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  build_modules.sh  toy-engine.ini
config_parser/: CMakeLists.txt
include/: glConfigurationValues.h  glEvent.h  glEventChannel.h  glEventManager.h  glEventQueue.h  glModule.h  glTaskManager.h
include/client/: glException.h
include/engine/: engineException.h
modules/: CMakeLists.txt  README.txt  glAudio.h  glInput.h  glVideo.h
src/: glEntry.cpp  glModule.cpp  glTaskManager.cpp
